--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       content="Web site created using create-react-app"
     />
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-3.png" />
+    <meta name="apple-mobile-web-app-title" content="Mami I'm Hungry">
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/logo-3.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
